Bug 15502 - render error detected, EIR: 0x00000010
Summary: render error detected, EIR: 0x00000010
Status: CLOSED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Video(DRI - Intel) (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: drivers_video-dri-intel@kernel-bugs.osdl.org
URL:
Keywords:
Depends on:
Blocks: 14885
  Show dependency tree
 
Reported: 2010-03-10 05:45 UTC by Artem Anisimov
Modified: 2010-10-28 23:30 UTC (History)
4 users (show)

See Also:
Kernel Version: 2.6.33
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments
Information supplied by 2.6.34-rc2 kernel (29.85 KB, application/bzip2)
2010-03-30 07:33 UTC, Artem Anisimov
Details

Description Artem Anisimov 2010-03-10 05:45:15 UTC
When I updated to kernel 2.6.33 and userspace X driver xf86-video-intel-2.10.0, I started getting the following error in my dmesg:

render error detected, EIR: 0x00000010
page table error
  PGTBL_ER: 0x00000010
[drm:i915_handle_error] *ERROR* EIR stuck: 0x00000010, masking
render error detected, EIR: 0x00000010
page table error
  PGTBL_ER: 0x00000010

  It did not happen with 2.6.33-rc5+xf86-video-intel-2.10.0 or with 2.6.33-rc5+xf86-video-intel-2.8.0.

  Here is my lspci:

00:00.0 Host bridge: Intel Corporation Mobile 915GM/PM/GMS/910GML Express Processor to DRAM Controller (rev 04)
        Subsystem: ASUSTeK Computer Inc. Device 1997
        Flags: bus master, fast devsel, latency 0
        Capabilities: [e0] Vendor Specific Information <?>
        Kernel driver in use: agpgart-intel

00:02.0 VGA compatible controller: Intel Corporation Mobile 915GM/GMS/910GML Express Graphics Controller (rev 04) (prog-if 00 [VGA controller])
        Subsystem: ASUSTeK Computer Inc. Device 1882
        Flags: bus master, fast devsel, latency 0, IRQ 11
        Memory at feb80000 (32-bit, non-prefetchable) [size=512K]
        I/O ports at ec00 [size=8]
        Memory at d0000000 (32-bit, prefetchable) [size=256M]
        Memory at feb40000 (32-bit, non-prefetchable) [size=256K]
        Expansion ROM at <unassigned> [disabled]
        Capabilities: [d0] Power Management version 2
        Kernel driver in use: i915

00:02.1 Display controller: Intel Corporation Mobile 915GM/GMS/910GML Express Graphics Controller (rev 04)
        Subsystem: ASUSTeK Computer Inc. Device 1882
        Flags: bus master, fast devsel, latency 0
        Memory at fea80000 (32-bit, non-prefetchable) [size=512K]
        Capabilities: [d0] Power Management version 2

00:1b.0 Audio device: Intel Corporation 82801FB/FBM/FR/FW/FRW (ICH6 Family) High Definition Audio Controller (rev 04)
        Subsystem: ASUSTeK Computer Inc. Device 1993
        Flags: bus master, fast devsel, latency 0, IRQ 11
        Memory at feb38000 (64-bit, non-prefetchable) [size=16K]
        Capabilities: [50] Power Management version 2
        Capabilities: [60] MSI: Enable- Count=1/1 Maskable- 64bit+
        Capabilities: [70] Express Root Complex Integrated Endpoint, MSI 00
        Capabilities: [100] Virtual Channel <?>
        Capabilities: [130] Root Complex Link <?>

00:1d.0 USB Controller: Intel Corporation 82801FB/FBM/FR/FW/FRW (ICH6 Family) USB UHCI #1 (rev 04) (prog-if 00 [UHCI])
        Subsystem: ASUSTeK Computer Inc. Device 1997
        Flags: bus master, medium devsel, latency 0, IRQ 5
        I/O ports at e400 [size=32]
        Kernel driver in use: uhci_hcd

00:1d.1 USB Controller: Intel Corporation 82801FB/FBM/FR/FW/FRW (ICH6 Family) USB UHCI #2 (rev 04) (prog-if 00 [UHCI])
        Subsystem: ASUSTeK Computer Inc. Device 1997
        Flags: bus master, medium devsel, latency 0, IRQ 7
        I/O ports at e480 [size=32]
        Kernel driver in use: uhci_hcd

00:1d.2 USB Controller: Intel Corporation 82801FB/FBM/FR/FW/FRW (ICH6 Family) USB UHCI #3 (rev 04) (prog-if 00 [UHCI])
        Subsystem: ASUSTeK Computer Inc. Device 1997
        Flags: bus master, medium devsel, latency 0, IRQ 3
        I/O ports at e800 [size=32]
        Kernel driver in use: uhci_hcd

00:1d.3 USB Controller: Intel Corporation 82801FB/FBM/FR/FW/FRW (ICH6 Family) USB UHCI #4 (rev 04) (prog-if 00 [UHCI])
        Subsystem: ASUSTeK Computer Inc. Device 1997
        Flags: bus master, medium devsel, latency 0, IRQ 11
        I/O ports at e880 [size=32]
        Kernel driver in use: uhci_hcd

00:1d.7 USB Controller: Intel Corporation 82801FB/FBM/FR/FW/FRW (ICH6 Family) USB2 EHCI Controller (rev 04) (prog-if 20 [EHCI])
        Subsystem: ASUSTeK Computer Inc. Device 1997
        Flags: bus master, medium devsel, latency 0, IRQ 5
        Memory at feb3fc00 (32-bit, non-prefetchable) [size=1K]
        Capabilities: [50] Power Management version 2
        Capabilities: [58] Debug port: BAR=1 offset=00a0
        Kernel driver in use: ehci_hcd

00:1e.0 PCI bridge: Intel Corporation 82801 Mobile PCI Bridge (rev d4) (prog-if 01 [Subtractive decode])
        Flags: bus master, fast devsel, latency 0
        Bus: primary=00, secondary=01, subordinate=02, sec-latency=32
        I/O behind bridge: 0000d000-0000dfff
        Memory behind bridge: fe800000-fe8fffff
        Prefetchable memory behind bridge: 0000000040000000-0000000043ffffff
        Capabilities: [50] Subsystem: ASUSTeK Computer Inc. Device 1997

00:1f.0 ISA bridge: Intel Corporation 82801FBM (ICH6M) LPC Interface Bridge (rev 04)
        Subsystem: ASUSTeK Computer Inc. Device 1997
        Flags: bus master, medium devsel, latency 0

00:1f.1 IDE interface: Intel Corporation 82801FB/FBM/FR/FW/FRW (ICH6 Family) IDE Controller (rev 04) (prog-if 8a [Master SecP P
riP])
        Subsystem: ASUSTeK Computer Inc. Device 1997
        Flags: bus master, medium devsel, latency 0, IRQ 3
        I/O ports at 01f0 [size=8]
        I/O ports at 03f4 [size=1]
        I/O ports at 0170 [size=8]
        I/O ports at 0374 [size=1]
        I/O ports at ffa0 [size=16]
        Kernel driver in use: ata_piix

01:03.0 CardBus bridge: Ricoh Co Ltd RL5c476 II (rev b3)
        Subsystem: ASUSTeK Computer Inc. Device 1997
        Flags: bus master, medium devsel, latency 32, IRQ 7
        Memory at fe800000 (32-bit, non-prefetchable) [size=4K]
        Bus: primary=01, secondary=02, subordinate=05, sec-latency=176
        Memory window 0: 40000000-43fff000 (prefetchable)
        Memory window 1: 44000000-47fff000
        I/O window 0: 0000d000-0000d0ff
        I/O window 1: 0000d400-0000d4ff
        16-bit legacy interface ports at 0001

01:03.1 FireWire (IEEE 1394): Ricoh Co Ltd R5C552 IEEE 1394 Controller (rev 08) (prog-if 10 [OHCI])
        Subsystem: ASUSTeK Computer Inc. Device 1997
        Flags: bus master, medium devsel, latency 64, IRQ 6
        Memory at fe8fd800 (32-bit, non-prefetchable) [size=2K]
        Capabilities: [dc] Power Management version 2

01:03.2 SD Host controller: Ricoh Co Ltd R5C822 SD/SDIO/MMC/MS/MSPro Host Adapter (rev 17)
        Subsystem: ASUSTeK Computer Inc. Device 1997
        Flags: bus master, medium devsel, latency 64, IRQ 4
        Memory at fe8fe400 (32-bit, non-prefetchable) [size=256]
        Capabilities: [80] Power Management version 2

01:03.3 System peripheral: Ricoh Co Ltd R5C592 Memory Stick Bus Host Adapter (rev 08)
        Subsystem: ASUSTeK Computer Inc. Device 1997
        Flags: medium devsel, IRQ 4
        Memory at fe8fe800 (32-bit, non-prefetchable) [size=256]
        Capabilities: [80] Power Management version 2

01:04.0 Ethernet controller: Realtek Semiconductor Co., Ltd. RTL-8139/8139C/8139C+ (rev 10)
        Subsystem: ASUSTeK Computer Inc. L8400B or L3C/S notebook
        Flags: bus master, medium devsel, latency 64, IRQ 4
        I/O ports at d800 [size=256]
        Memory at fe8fec00 (32-bit, non-prefetchable) [size=256]
        Capabilities: [50] Power Management version 2
        Kernel driver in use: 8139too

01:05.0 Network controller: Intel Corporation PRO/Wireless 2200BG [Calexico2] Network Connection (rev 05)
        Subsystem: Intel Corporation Device 2701
        Flags: bus master, medium devsel, latency 64, IRQ 3
        Memory at fe8ff000 (32-bit, non-prefetchable) [size=4K]
        Capabilities: [dc] Power Management version 2
        Kernel driver in use: ipw2200
        Kernel modules: ipw2200
Comment 1 Artem Anisimov 2010-03-30 07:33:36 UTC
Created attachment 25761 [details]
Information supplied by 2.6.34-rc2 kernel
Comment 2 Artem Anisimov 2010-03-30 07:36:13 UTC
Still happens with 2.6.34-rc2 kernel. I have attached /sys/kernel/debug/dri/0/i915_error_state as suggested by intel's driver bug reporting guide.
Comment 3 Chris Wilson 2010-05-18 09:20:42 UTC
This should have been fixed with, released in 2.6.33-rc8:

commit fd2e8ea597222b8f38ae8948776a61ea7958232e
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Tue Feb 9 14:14:36 2010 +0000

    drm/i915: Increase fb alignment to 64k
    
    An untiled framebuffer must be aligned to 64k. This is normally handled
    by intel_pin_and_fence_fb_obj(), but the intelfb_create() likes to be
    different and do the pinning itself. However, it aligns the buffer
    object incorrectly for pre-i965 chipsets causing a PGTBL_ERR when it is
    installed onto the output.
    
    Fixes:
      KMS error message while initializing modesetting -
      render error detected: EIR: 0x10 [i915]
      http://bugs.freedesktop.org/show_bug.cgi?id=22936
    
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
    Cc: stable@kernel.org
    Signed-off-by: Eric Anholt <eric@anholt.net>

Note You need to log in before you can comment on or make changes to this bug.